--- a/Aula_X.ipynb
+++ b/Aula_X.ipynb
@@ -92,7 +92,7 @@
     "\n",
     "- Para inserir suas credenciais no git, execute o comando `git config --global user.name \"nome_de_usuario\"` e aperte **Enter**, e depois execute o comando `git config --global user.email \"usuario@servidor.com\"` e finalize com **Enter**.\n",
     "- Para conferir se as credenciais foram inseridas corretamente, execute o comando `git config --list` e aperte **Enter**, e depois procure na lista pelo seu nome de usuário e e-mail.\n",
-    "- Caso queira retirar as suas credenciais do computador, execute o comando `git config --global unset user.name`, aperte **Enter**, e depois execute o comando `git config --global unset user.email`, e termine com **Enter**.\n",
+    "- Caso queira retirar as suas credenciais do computador, execute o comando `git config --global --unset user.name`, aperte **Enter**, e depois execute o comando `git config --global --unset user.email`, e termine com **Enter**.\n",
     "\n",
     "#### Preparando os arquivos\n",
     "\n",
