--- a/Aula_01.ipynb
+++ b/Aula_01.ipynb
@@ -189,7 +189,7 @@
     "\n",
     "### Ranking da TIOBE\n",
     "\n",
-    "Agora observe o _ranking_ da TIOBE, cujas classificações são baseadas no número de engenheiros qualificados nas linguagens em todo o mundo, cursos e fornecedores terceirizados."
+    "Agora observe o _ranking_ da TIOBE (https://www.tiobe.com/tiobe-index/), cujas classificações são baseadas no número de engenheiros qualificados nas linguagens em todo o mundo, cursos e fornecedores terceirizados."
    ]
   },
   {
