--- a/Aula_11.ipynb
+++ b/Aula_11.ipynb
@@ -221,6 +221,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Forma 3\n",
+    "\n",
+    "Você pode também, caso deseje, criar uma **tupla** com o nome das chaves  desejadas. Assim, você protege o dicionário contra alterações das chaves, caso precise, além de poder exibir os dados do dicionário em um laço ***for***:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nome: Alex Machado\n",
+      "Idade: 39\n",
+      "Profissão: Programador\n",
+      "Empresa: SENAI\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tupla das chaves\n",
+    "chaves = ('Nome', 'Idade', 'Profissão', 'Empresa')\n",
+    "\n",
+    "# dicionário\n",
+    "pessoa = {\n",
+    "    chaves[0]:'Alex Machado',\n",
+    "    chaves[1]:39,\n",
+    "    chaves[2]:'Programador',\n",
+    "    chaves[3]:'SENAI'\n",
+    "}\n",
+    "\n",
+    "# laço\n",
+    "for chave in chaves:\n",
+    "    print(f'{chave}: {pessoa.get(chave)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Adicionando uma nova chave ao dicionário\n",
     "---"
    ]
