Atualizado: aula 11, formas de acesso aos dados forma 3 e forma 4.

--- a/Aula_11.ipynb
+++ b/Aula_11.ipynb
@@ -223,6 +223,44 @@
    "source": [
     "### Forma 3\n",
     "\n",
+    "É possível percorrer o dicionário como uma lista através de um laço de repetição, como o laço ***for***, por exemplo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nome: Alex Machado\n",
+      "Idade: 39\n",
+      "Profissão: Programador\n",
+      "Empresa: SENAI\n"
+     ]
+    }
+   ],
+   "source": [
+    "pessoa = {\n",
+    "    'Nome':'Alex Machado',\n",
+    "    'Idade':39,\n",
+    "    'Profissão':'Programador',\n",
+    "    'Empresa':'SENAI'\n",
+    "}\n",
+    "\n",
+    "# laço\n",
+    "for chave in pessoa:\n",
+    "    print(f'{chave}: {pessoa.get(chave)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Forma 4\n",
+    "\n",
     "Você pode também, caso deseje, criar uma **tupla** com o nome das chaves  desejadas. Assim, você protege o dicionário contra alterações das chaves, caso precise, além de poder exibir os dados do dicionário em um laço ***for***:"
    ]
   },
@@ -254,7 +292,6 @@
     "    chaves[3]:'SENAI'\n",
     "}\n",
     "\n",
-    "# laço\n",
     "for chave in chaves:\n",
     "    print(f'{chave}: {pessoa.get(chave)}')"
    ]
