Acresccentando nova forma de criar ambiente virtual e tipagem de variável.

--- a/Aula_04.ipynb
+++ b/Aula_04.ipynb
@@ -303,7 +303,13 @@
    "source": [
     "17. Há ainda uma outra forma, via CLI. Você pode abrir um terminal dentro do VSCode, clicando no menu **Terminal -> Novo Terminal**, ou clicando com o botão direito e escolhendo a opção **Abrir no Terminal Integrado**, ou usando a tecla de atalho **Ctrl+Shift+'**.\n",
     "\n",
-    "18. Depois, é só digitar o comando `python -m venv /path/to/new/virtual/environment`"
+    "18. Depois, é só digitar o comando `python -m venv /path/to/new/virtual/environment`.\n",
+    "\n",
+    "19. Uma outra opção com CLI: você pode instalar um pacote para criação de ambientes virtuais usando o gerenciador de pacotes pip, através  do comando `pip install virtualenv`.\n",
+    "\n",
+    "20. Em seguida, é só usar o comando `virtualenv .venv` para criar o ambiente virtual.\n",
+    "\n",
+    "21. Em qualquer um dos casos usando CLI, será necessário a ativação do ambiente virtual, também via CLI. Para isso, é só inserir o comando `.venv/Scripts/Activate`."
    ]
   },
   {
@@ -330,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
