--- a/Aula_05.ipynb
+++ b/Aula_05.ipynb
@@ -383,6 +383,55 @@
     "\n",
     "É utilizado o sinal de igual (=) para atribuir um valor à uma variável. Lembre-se de que, na programação, o sinal de igual nunca significa igualdade, mas sim é usado para informar que algo recebeu um determinado valor.\n",
     "\n",
+    "#### Type Annotation - Tipando variáveis em Python\n",
+    "\n",
+    "Embora Python seja uma linguagem de tipagem dinâmica, há a possibilidade de tipar manualmente as variáveis, igual às linguagens tipadas, como o C ou o Java, por exemplo.\n",
+    "\n",
+    "Mas se o Python tem tipagem dinâmica, por que eu precisaria informar o tipo da variável? Segue abaixo os motivos:\n",
+    "\n",
+    "- Prevenção de bugs.\n",
+    "- Detecção de erros antecipados.\n",
+    "- Facilidade de identificação por IDEs, que podem informar possíveis erros antes da execução.\n",
+    "- Documentação de código-fonte e facilidade de compreensão.\n",
+    "\n",
+    "Segue abaixo um exemplo de **Type Annotation**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Este é um texto.\n",
+      "10\n",
+      "1.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# variável do tipo texto\n",
+    "texto: str = 'Este é um texto.'\n",
+    "\n",
+    "# variável do tipo inteiro\n",
+    "numero: int = 10\n",
+    "\n",
+    "# variável do tipo decimal\n",
+    "num_decimal: float = 1.5\n",
+    "\n",
+    "# saída de dados\n",
+    "print(texto)\n",
+    "print(numero)\n",
+    "print(num_decimal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exibindo o valor de uma variável\n",
     "\n",
     "Isso pode ser feito utilizando o comando `print()`, mas informando o nome da variável dentro do parênteses sem as aspas. Segue o código-fonte abaixo:"
@@ -857,7 +906,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
